--- a/contact_us.html
+++ b/contact_us.html
@@ -25,27 +25,30 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
       
-        <div class="header"> 
-          <nav class="navbar col-12">
-              <div class="row-index col-12"> 
-                <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
-              </div>  
-              <div class="row-index col-12"> 
-                <div class="dropdown">
-                  <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa fa-bars fa-2x"></i>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="index.html">Home</a></li>
-                    <li><a class="dropdown-item" href="about.html">About</a></li>
-                    <li><a class="dropdown-item" href="services.html">Services</a></li>
-                    <li><a class="dropdown-item" href="projects.html">Projects</a></li>
-                    <li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
-                  </ul>
-                </div>
+      <div class="header"> 
+        <nav class="navbar">
+            <div class="Pipe-Wrench col-1"> 
+              <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+            </div>
+            <div class="navbar-brand col-7"> 
+              <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+            </div>  
+            <div class="dropdown-index col-1"> 
+              <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-bars fa-2x"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" href="index.html">Home</a></li>
+                  <li><a class="dropdown-item" href="about.html">About</a></li>
+                  <li><a class="dropdown-item" href="services.html">Services</a></li>
+                  <li><a class="dropdown-item" href="projects.html">Projects</a></li>
+                  <li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
+                </ul>
               </div>
-          </nav>
-        </div> 
+            </div>
+        </nav>
+      </div>  
     
         <div class="hero">
             <div class="hero-inner-contact"> 
