--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
 <div class="header"> 
-  <nav class="navbar col-12">
-      <div class="row-index col-12"> 
+  <nav class="navbar">
+      <div class="Pipe-Wrench col-1"> 
+        <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+      </div>
+      <div class="navbar-brand col-7"> 
         <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
-      <div class="row-index col-12"> 
+      <div class="dropdown-index col-1"> 
         <div class="dropdown">
           <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa fa-bars fa-2x"></i>
@@ -49,18 +52,13 @@
 
 <div class="hero">
   <div class="hero-inner-index">
-    <div class="grid-index">
-      <div class="Pipe-Wrench col-md-2 col-sm-3"> 
-        <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
-      </div>
-      <div class="Text col-md-10 col-sm-9">
+      <div class="Text">
         <h1 class="Dirty-work fw-bold" style="font-size: 5vw">We do the dirty work so you don't have to!</h1>
         <br>
         <p class="Happy fw-bold" style="font-size: 3vw">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
         <br>
         <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
       </div>
-    </div>
     <div class="image">
       <div class="card shadow-lg">
         <div class="card-header">
