--- a/success.html
+++ b/success.html
@@ -13,10 +13,40 @@
   </head>
 
   <body>
+
+    <div class="header"> 
+      <nav class="navbar">
+          <div class="Pipe-Wrench col-1"> 
+            <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+          </div>
+          <div class="navbar-brand col-7"> 
+            <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+          </div>  
+          <div class="dropdown-index col-1"> 
+            <div class="dropdown">
+              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa fa-bars fa-2x"></i>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="index.html">Home</a></li>
+                <li><a class="dropdown-item" href="about.html">About</a></li>
+                <li><a class="dropdown-item" href="services.html">Services</a></li>
+                <li><a class="dropdown-item" href="projects.html">Projects</a></li>
+                <li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+      </nav>
+    </div> 
+
     <div class="container mt-5">
         <h1>Contact Mosley Plumbing Company!</h1>
         <h2>Success! We will get back in touch with you soon.</h2>
         <h4>Thank you so much for choosing Mosley Plumbing Company for your plumbing needs!</h4>
+    </div>
+
+    <div class="footer">
+      <p>2024 Mosley Plumbing Company, Inc.</p>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
