--- a/contact form.html
+++ b/contact form.html
@@ -26,35 +26,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
     <div class="header"> 
-    <nav class="navbar col-12">
-        <div class="row-index col-12"> 
-            <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
-        </div>  
-        <div class="row-index col-12"> 
-            <div class="dropdown">
-            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-bars fa-2x"></i>
-            </button>
-            <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="index.html">Home</a></li>
-                <li><a class="dropdown-item" href="about.html">About</a></li>
-                <li><a class="dropdown-item" href="services.html">Services</a></li>
-                <li><a class="dropdown-item" href="projects.html">Projects</a></li>
-                <li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
-            </ul>
+        <nav class="navbar">
+            <div class="Pipe-Wrench col-1"> 
+              <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
             </div>
-        </div>
-    </nav>
-    </div> 
+            <div class="navbar-brand col-7"> 
+              <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+            </div>  
+            <div class="dropdown-index col-1"> 
+              <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-bars fa-2x"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" href="index.html">Home</a></li>
+                  <li><a class="dropdown-item" href="about.html">About</a></li>
+                  <li><a class="dropdown-item" href="services.html">Services</a></li>
+                  <li><a class="dropdown-item" href="projects.html">Projects</a></li>
+                  <li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+      </div> 
+
 <div class="hero">
     <div class="container mt-5">
         <h1 class="Heading fw-bold" style="font-size: 5vw">Contact Mosley Plumbing Company!</h1>
-        <form class="row g-3" action="https://formsubmit.co/mosleyplumbing@gmail.com" method="POST">
+        <form class="row g-3" action="https://formsubmit.co/mosleylaura95@gmail.com" method="POST">
             <!-- Honeypot --> 
             <input type="text" name="_honey" style="display: none;"> 
 
             <!-- Success Message Link -->
-            <input type="hidden" name="_next" value="https://mosleyl14.github.io/Mosley-Plumbsing-Company-Inc/success.html">
+            <input type="hidden" name="_next" value="success.html">
 
             <div class="col-md-6">
                 <label for="firstName" class="form-label">First Name</label>
@@ -82,6 +86,10 @@
         </form>
     </div>
 </div>
+
+<div class="footer">
+    <p>2024 Mosley Plumbing Company, Inc.</p>
+  </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
