--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     
     <div class="header"> 
-      <nav class="navbar col-12">
-          <div class="row-index col-12"> 
+      <nav class="navbar">
+          <div class="Pipe-Wrench col-1"> 
+            <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+          </div>
+          <div class="navbar-brand col-7"> 
             <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
           </div>  
-          <div class="row-index col-12"> 
+          <div class="dropdown-index col-1"> 
             <div class="dropdown">
               <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-bars fa-2x"></i>
