--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
           </div>
           <div class="navbar-brand col-7"> 
-            <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+            <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
           </div>  
           <div class="dropdown-index col-1"> 
             <div class="dropdown">
@@ -52,13 +52,13 @@
 
     <div class="hero">
         <div class="hero-inner-about"> 
-           <h1 style="text-align:center;">About Us</h1>
+           <h1 style="text-align:center" class="fw-bold">About Us</h1>
          <br> 
          <p style="text-align:center;">Providing residentail and commercial plumbing services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
          <br> 
          <p style="text-align:center;">We are a full service plumbing company, fully Licensed, and Insured!</p> 
          <br> 
-         <h4 style="text-align:center;">Licenses and Certification:</h4> 
+         <h3 style="text-align:center" class="fw-bold">Licenses and Certification:</h3> 
           <div class="about">
             <li class="bullets-inside">North Carolina Plumbing Licence Class 1</li>
             <li class="bullets-inside">Residential Fire Sprinkler Installation Contractor</li> 
