--- a/contact_us.html
+++ b/contact_us.html
@@ -31,7 +31,7 @@
               <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
             </div>
             <div class="navbar-brand col-7"> 
-              <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+              <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
             </div>  
             <div class="dropdown-index col-1"> 
               <div class="dropdown">
@@ -50,37 +50,49 @@
         </nav>
       </div>  
     
-        <div class="hero">
-            <div class="hero-inner-contact"> 
-               <h1>Contact Us</h1>
-               <br>
-             <h2>Email:</h2>
-             <a target="_blank" href="contact form.html">mosleyplumbing@gmail.com</a>
-             <br>
-             <br>
-             <h2>Phone:</h2>
-             <p>(252) 492-0243 *Please leave us a message*</p>
-             <br>
-             <h2>Address:</h2>
-             <p>247 E Montgomery St.<br>
-             Henderson, NC 27536</p>
-             <br>
-             <h2>Hours:</h2>
-             <p>Monday: 7:30 AM - 4:00 PM<br>
-             Tuesady: 7:30 AM - 4:00 PM<br>
-             Wednesday: 7:30 AM - 4:00 PM<br>
-             Thursday: 7:30 AM - 4:00 PM<br>
-             Friday: 7:30 AM - 4:00 PM<br>
-             Saturday: 7:30 AM - 12:00 PM *Emergency hours*<br>
-             Sunday: 7:30 AM - 12:00 PM *Emergency hours*</p>
-             <br>
-             <p>*Phones and emails are checked regularly during business hours. Please feel free to leave a message and know we will get back to you shortly to schedule your service visit. Please leave your name, number, and a description of your service request.*</p>
-             </div>
-           </div>
-    
-          <div class="footer">
-            <p>2024 Mosley Plumbing Company, Inc.</p>
+    <div class="hero-contact">
+      <div class="grid">
+        <div class="row">
+          <div class="heading">
+            <h1 style="text-align:center" class="fw-bold">Contact Us</h1>
           </div>
+            <div class="contact-info col-md-5" style="text-align:center"> 
+              <div class="contact">
+                <h2 class="fw-bold">Email:</h2>
+                <a target="_blank" href="contact form.html">mosleyplumbing@gmail.com</a>
+                <br>
+                <br>
+                <br>
+                <h2 class="fw-bold">Phone:</h2>
+                <p>(252) 492-0243</p>
+                <div class="note">
+                  <p>*Please leave us a message - Phones and emails are checked regularly during business hours. Please feel free to leave a message and know we will get back to you shortly to schedule your service visit. Please leave your name, number, and a description of your service request.*</p>
+                </div>
+              </div>
+            </div>
+            <div class="contact-info col-md-5" style="text-align:center">
+              <div class="contact"> 
+                <h2 class="fw-bold">Address:</h2>
+                <p>247 E Montgomery St.<br>
+                Henderson, NC 27536</p>
+                <br>
+                <h2 class="fw-bold">Hours:</h2>
+                <p>Monday: 7:30 AM - 4:00 PM<br>
+                Tuesady: 7:30 AM - 4:00 PM<br>
+                Wednesday: 7:30 AM - 4:00 PM<br>
+                Thursday: 7:30 AM - 4:00 PM<br>
+                Friday: 7:30 AM - 4:00 PM<br>
+                Saturday: 7:30 AM - 12:00 PM *Emergency hours*<br>
+                Sunday: 7:30 AM - 12:00 PM *Emergency hours*</p> 
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+      <div class="footer">
+        <p>2024 Mosley Plumbing Company, Inc.</p>
+      </div>
 
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
