--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
           </div>
           <div class="navbar-brand col-7"> 
-            <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+            <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
           </div>  
           <div class="dropdown-index col-1"> 
             <div class="dropdown">
@@ -52,7 +52,7 @@
 
     <div class="hero">
         <div class="hero-inner-project"> 
-           <h1>Noteworthy Projects</h1>
+           <h1 style="text-align:center" class="fw-bold">Noteworthy Projects</h1>
            <br> 
          <p>Content coming soon...</p>
          </div>
