--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
                 <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
               </div>
               <div class="navbar-brand col-7"> 
-                <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+                <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
               </div>  
               <div class="dropdown-index col-1"> 
                 <div class="dropdown">
@@ -51,9 +51,9 @@
         </div> 
     
         <div class="hero">
-            <div class="hero-inner-services"> 
-               <h1>Services Offered</h1>
-               <h3 style="text-align:center;">Residential & Commercial</h3>
+            <div class="hero-inner-services col-4"> 
+               <h1 style="text-align:center" class="fw-bold">Services Offered</h1>
+               <h3 style="text-align:center">Residential & Commercial</h3>
              <p><ul>
                   <li>Repair, Remodel, and New Construction</li>
                   <li>Water Heater Replacement/Upgrade</li>
