--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
       <div class="navbar-brand col-7"> 
-        <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+        <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="dropdown-index col-1"> 
         <div class="dropdown">
@@ -50,46 +50,29 @@
   </nav>
 </div> 
 
-<div class="hero">
-  <div class="hero-inner-index">
-      <div class="Text">
-        <div class="grid-features-hero">
-          <div class="row-hero">
-            <div class="Index-main col-sm-8">
-              <div class="card shadow-lg">
-
-                <div class="card-header-hero">
-                  <img src="Images/MosleyPlumbing.jpg" alt="" class="img-fluid">
-                </div>
-
-                <div class="card-body-hero">
-                  <h1 class="Dirty-work fw-bold">We do the dirty work so you don't have to!</h1>
-                  <p class="fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
-                </div>
-
-              </div>
-            </div>
+<div class="hero-index">
+  <div class="grid">
+    <div class="row">
+      <div class="Index-main col-sm-11">
+        <div class="card shadow-lg">
+          <div class="card-header text-white">
+            <img src="Images/MosleyPlumbing.png" alt="" class="img-fluid">
           </div>
-        </div>
-        <br>
-        <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
-      </div>
-    <!-- 
-    <div class="image">
-      <div class="card shadow-lg">
-        <div class="card-header">
-          <img src="Images/MosleyPlumbing.jpg" alt="" class="img-fluid">
+          <div class="card-body">
+            <h1 class="fw-bold">We do the dirty work so you don't have to!</h1> 
+            <p class="fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+          </div>
         </div>
       </div>
     </div>
-  --> 
   </div>
+  <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
 </div>
 
 <div class="features">
-    <div class="grid-features">
+    <div class="grid">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="features-main col-sm-6">
           <div class="card shadow-lg">
             <div class="card-header text-white">
               <img src="Images/Kenny.png" alt="" class="img-fluid">
@@ -100,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="features-main col-sm-6">
           <div class="card shadow-lg">
             <div class="card-header text-white">
               <img src="Images/Renee.png" alt="" class="img-fluid">
@@ -123,9 +106,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-<!-- Dark Mode Toggle -->
-<!-- <script src="dark-mode-toggle.js"></script> -->
 
 </body>
 </html>
