--- a/contact form.html
+++ b/contact form.html
@@ -51,14 +51,19 @@
     </nav>
   </div> 
 
-  <div class="hero">
+  <!--<div class="hero">
     <div class="container mt-5">
-      <h1 class="heading fw-bold" style="font-size: 5vw">Contact Mosley Plumbing Company!</h1>
+      <h1 class="heading fw-bold" style="font-size: 5vw">Contact Mosley Plumbing Company!</h1> 
+      --> 
       <form class="row g-3" action="https://formsubmit.co/mosleylaura95@gmail.com" method="POST">
         <!-- Honeypot --> 
+        
+        <!--
         <input type="text" name="_honey" style="display: none;"> 
+        --> 
 
         <!-- Success Message Link -->
+        <!--
         <input type="hidden" name="_next" value="https://mosleyl14.github.io/Mosley-Plumbing-Company-Inc/success.html">
 
         <div class="col-md-6">
@@ -86,6 +91,25 @@
         </div>
       </form>
     </div>
+  </div> 
+  --> 
+
+  <div>
+    <h2>Contact Us</h2>
+    <form id="contactForm">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+
+        <button type="submit">Send</button>
+    </form>
+
+    <script src="nodemailer.js"></script>
   </div>
 
   <div class="footer">
