--- a/contact_us.html
+++ b/contact_us.html
@@ -60,9 +60,7 @@
         <div class="contact-info col-md-5" style="text-align:center"> 
           <div class="contact">
             <h2 class="fw-bold">Email:</h2>
-            <a target="_blank" href="contact form.html">mosleyplumbing@gmail.com</a>
-            <br>
-            <br>
+            <p>mosleyplumbing@gmail.com</p>
             <br>
             <h2 class="fw-bold">Phone:</h2>
             <p>(252) 492-0243</p>
