--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 
   <div class="header"> 
     <nav class="navbar">
-      <div class="Space col-1"> 
+      <div class="Pipe-Wrench col-1"> 
+        <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
       <div class="navbar-brand col-7"> 
-        <div class="Pipe-Wrench col-1"> 
-          <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
-        </div>
-        <a class="brand col-7 fw-bold" href="index.html">Mosley Plumbing Company, Inc.</a> 
+        <a class="navbar-brand fw-bold" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="dropdown-index col-1"> 
         <div class="dropdown">
