--- a/contact_us.html
+++ b/contact_us.html
@@ -72,9 +72,19 @@
         <div class="contact-info col-md-5" style="text-align:center">
           <div class="contact"> 
             <h2 class="fw-bold">Address:</h2>
-            <p>247 E Montgomery St.<br>
-            Henderson, NC 27536</p>
-            <br>
+            <div class="grid">
+              <div class="address col-6">
+                <h5>Physical:</h5>
+                <p>247 E Montgomery St.<br>
+                Henderson, NC 27536</p>
+              </div>
+              <div class="address col-6">
+                <h5>Mailing:</h5>
+                <p>P.O. Box 2537<br> 
+                Henderson NC 27536</p>
+              </div>
+            </div>
+            <br> 
             <h2 class="fw-bold">Hours:</h2>
             <p>Monday: 7:30 AM - 4:00 PM<br>
             Tuesady: 7:30 AM - 4:00 PM<br>
