--- a/contact_us.html
+++ b/contact_us.html
@@ -70,18 +70,20 @@
           </div>
         </div>
         <div class="contact-info col-md-5" style="text-align:center">
-          <div class="contact"> 
+          <div class="contact col-12"> 
             <h2 class="fw-bold">Address:</h2>
             <div class="grid">
-              <div class="address col-6">
-                <h5>Physical:</h5>
-                <p>247 E Montgomery St.<br>
-                Henderson, NC 27536</p>
-              </div>
-              <div class="address col-6">
-                <h5>Mailing:</h5>
-                <p>P.O. Box 2537<br> 
-                Henderson NC 27536</p>
+              <div class="row">
+                <div class="address col-lg-6 col-md-12">
+                  <h5>Physical:</h5>
+                  <p>247 E Montgomery St<br>
+                  Henderson, NC 27536</p>
+                </div>
+                <div class="address col-lg-6 col-md-12">
+                  <h5>Mailing:</h5>
+                  <p>P.O. Box 2537<br> 
+                  Henderson NC 27536</p>
+                </div>
               </div>
             </div>
             <br> 
